--- a/Desafios/d012/estilo/style.css
+++ b/Desafios/d012/estilo/style.css
@@ -1,23 +1,36 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+:root {
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: 'Passion One', cursive;
+    --font3: 'Sriracha', cursive;
+}
 
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body {
     min-height: 100%;
     background-color: darkgrey;
+    font-family: var(--font1);
 
 }
 header {
     background-color: black;
     color: white;
     text-align: center;
+    
 }
 header h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 8vw;
 
 }
 header p {
@@ -37,6 +50,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--font3);
+    font-size: 3.5vw;
 }
 section.normal {
     background-color: white;
@@ -44,12 +59,14 @@ section.normal {
 }
 section.imagem {
     background-color: rgb(44, 40, 40);
-    color: white
+    color: white;
+    
 
 }
 section.imagem > p {
     background-color: rgba(0, 0, 0, 0.218);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 }
 
 
