--- a/Desafios/d012/estilo/style.css
+++ b/Desafios/d012/estilo/style.css
@@ -60,14 +60,30 @@ section.normal {
 section.imagem {
     background-color: rgb(44, 40, 40);
     color: white;
+    box-shadow: inset 6px 6px 13px black;
+    background-size: cover;
+    background-attachment: fixed;
     
 
 }
 section.imagem > p {
-    background-color: rgba(0, 0, 0, 0.218);
+    background-color: rgba(0, 0, 0, 0.425);
     display: inline-block;
     padding: 5px;
+    text-shadow: 1px 1px 0px black ;
+    
 }
+section > p {
+    padding-bottom: 1em;
+}
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right bottom;
+    
+}
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    
 
 
 
